v0.5.7 - 
  - fix Mac crash due to nonmatching SDL dlls when not using SDL audio (issue 190, patch by useboxnet@gmail.com, thanks)

v0.5.5 - August 12, 2012
  - fix issue 168, now particle textures are propper (this can change visual size for particlers in old code)
  - fix issue 184, BatchNode now honors the visible flag, patch by corentinglon@gmail.com
  - particles work even if gl point sprites not available, issue 178
  - fix issue 162, grid transitions ending with wrong projection / modelview matrices
  - fix issue 164, ZoomTransition misbehaves with some hardware
  - add TMX format tile map loading (generated by the Tiled map editor)
  - action Blink now leaves the node with the same visible state than on start
  - removed crashing debug print in action Spawn, issue 173 reported by pascal.lemerrer@gmail.com
  - fixed issue 76 distorted view for interpreter layer and fps display when using grid transformations
  - fixed memory leak with ScrollingManager and ScrollableLayer, issue 169 reported by  davexunit@gmail.com
  - TransitionScene now preserves modelview matrix, fixes issue 172 reported by AcidTonic@gmail.com
  - action operator AccelDeccel calls .update(1.0), fixes issue 171 reported by AcidTonic@gmail.com

v0.5.0 - October 26, 2011
  - better docs
  - small upgrade in tiles, see r1156
  - collision_manager_model Cshape changed method .touchs_point() -> .touches_point()
  - emit message in console warning about incompatible change coming in next cocos version
    ParticleSystem is the target code, see issue 168
  - fix trivial compatibility with pyglet repo related to FBOs, issue 170

v0.5rc0 - August 14, 2011
  - basic pure python collision support added, see cocos/collision_model.py
  - fixed __init__ for hexmaps 
  - fixed unpause not working in SDL audio
  - added test_transitions_with_pop_recipe.py
  - fixed small bug in TransitionScene when a transition begins amidst another
    transition